# machine-learning

./: .gitignore  .prettierrc  README.md  main.py  package-lock.json  package.json  pyproject.toml
src/: handler-1-0-0.py
tacotron2/: .gitignore  synthesize.py
