[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["nitichaisawangsai"]
license = "nitichaisawangsai"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
datetime = "^5.5"
logging = "^0.4.9.6"
pytz = "^2024.1"
numpy = "^1.26.4"
lab = "^8.1"
python-dotenv = "^1.0.1"
black = "^24.4.0"
jupyterlab = "^4.1.6"
xlrd = "^2.0.1"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"
torch = "^2.2.2"
torchvision = "^0.17.2"
torchaudio = "^2.2.2"
packaging = "^24.0"
apex = "^0.9.10.dev0"
unidecode = "^1.3.8"
pillow = "^10.3.0"
tensorboardx = "^2.6.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
